@@ -109,6 +109,7 @@ easier to use. The changes are:
 - Dxtory capture format decoder
 - v410 QuickTime uncompressed 4:4:4 10-bit encoder and decoder
 - OpenMG Audio muxer
+- Simple segmenting muxer
 
 
 version 0.7:
